--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "commander": "^7.2.0",
     "ejs": "^3.1.6",
     "fs-extra": "^10.0.0",
+    "js2xml": "^1.0.9",
     "mysql2": "^2.2.5"
   },
   "scripts": {
